# sigslot

./: CMakeLists.txt
.cache/clangd/index/: sig.cpp.8CDDA1C4F46BA3C2.idx  signal.ixx.BF808456815D31DF.idx
example/: CMakeLists.txt  sig.cpp
include/sigslot/: signal.ixx
